Fixed alignment issues inside the form and the button

--- a/style/styles.css
+++ b/style/styles.css
@@ -78,7 +78,6 @@ main img {
 .main-form {
     
    display: grid;
-   grid-template-columns: 33% 33% 33%;
    
   
 }
@@ -96,7 +95,7 @@ main img {
     font-size: 1.125em;
     font-weight: normal;
     text-align: right;
-    /* margin-left: 10px; */
+    margin: 0 auto;
 
     display: flex;
     align-items: center;
@@ -118,7 +117,8 @@ main img {
 }
 
 .fieldset-div {
-background-color: #ffffff;
+    background-color: #ffffff;
+    margin: 0 auto;
 }
 .center-form{
     text-align: center;
@@ -130,17 +130,18 @@ background-color: #ffffff;
 }
 
 .special-div{
-    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .input-class {
-    text-align: left;
+    width: 100%;
     
 }
 
 .input-class input {
-    width: 320px;
-    height: 34px; 
+    width: 100%;
+    height: 34px;   
 }
 
 
